<resources>
    <string name="app_name">Proiect_Dam_Retete</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="act_add_recipe_recipe_name">Recipe name</string>
    <string name="act_add_recipe_recipe_description">Recipe description</string>
    <string name="act_add_recipe_tv_ingredients">Ingredients:</string>
    <string name="act_add_recipe_submit_btn">Submit</string>
    <string name="act_add_recipe_add_ingredient_btn">Add ingredient</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="add_recipe_form_enter_a_valid_recipe_name">Enter a valid recipe name!</string>
    <string name="add_recipe_form_choose_at_least_one_ingredient">Choose at least one ingredient!</string>
    <string name="default_logging_string">logging</string>
    <string name="empty_string" />
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_recipes">Recipes</string>
    <string name="nav_menu_most_viewed">Most Viewed</string>
    <string name="main_tv_info_dishes">Avalabile dishes for your selected ingredients:</string>
    <string name="main_tv_info_ingredients">You have selected the following ingredientes</string>
    <string name="main_btn_add_ingredients">Add ingredients</string>
    <string name="no_ingredients_string">Whoops... </string>
    <string name="activity_most_viewed_most_viewed_recipes">Most Viewed</string>
    <string name="most_viewed_activity_sorted_by_views">Views</string>
    <string name="most_viewed_activity_sorted_by_rating">Rating</string>
    <string name="add_recipes">Add Recipes</string>
    <string name="fetched_recipe">fetchedRecipe</string>
    <string name="fetched_recipe_bundle">fetchedRecipeBundle</string>
    <string name="activity_origin">activityOrigin</string>
    <string name="recipe_list_activity">RecipeListActivity</string>
    <string name="recipes_array">current_recipes</string>

    <string name="time_for_cooking">Time for cooking</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="selected_ingredients">selected_ingredients</string>
    <string name="recipes_found">Recipes Found:</string>
    <string name="filter_recipe_list_by_text">Filter recipe list by:</string>
    <string name="views">Views</string>
    <string name="size">Size</string>
    <string name="recipe_list_filters">Recipe List Filters</string>
    <string name="available_recipes">Available Recipes</string>
    <string name="time_to_cook">Time To Cook</string>
    <string name="main_activity_recipe">mainActivityRecipe</string>
    <string name="add_ingredients_from">addIngredientsFrom</string>
    <string name="fetched_ingredient_tag">fetchedIngredientTag</string>
    <string name="ingredient">ingredient</string>
    <string name="pure">pure</string>
    <string name="main_activity_ingredient">mainActivityIngredient</string>
    <string name="add_recipe_from">addRecipeFrom</string>
    <string name="recipe">recipe</string>
    <string name="new_line">\n</string>
    <string name="imp_tag">imp</string>
    <string name="system_error_form_not_properly_initialized">System error: form not properly initialized</string>
    <string name="please_introduce_a_valid_quantity">Please introduce a valid quantity</string>
    <string name="invalid_quantity">Invalid quantity</string>
    <string name="append_dash">" - "</string>
    <string name="fetched_recipe_tag">fetchedRecipeTag</string>
    <string name="recipe_size">"Recipe size: "</string>
    <string name="views_comma">"Views: "</string>
    <string name="new_recipe">new_recipe</string>
    <string name="choose_the_desired_ingredient">Choose the desired ingredient</string>
    <string name="quantity">Quantity</string>
    <string name="add">Add</string>
    <string name="no_ingredients_have_been_added_yet">No ingredients have been added yet!</string>
    <string name="no_available_recipes">No Available Recipes</string>
</resources>