<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteSpecial"
    tools:context=".AddIngredientsForm">

    <TextView
        android:id="@+id/dinita_cosmina_text_view_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/choose_the_desired_ingredient"
        android:textSize="25dp"
        android:textColor="@color/_333333"
        android:shadowColor="@color/_80000000"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="8"
        android:gravity="center"
        />

    <Spinner
        android:id="@+id/dinita_cosmina_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginHorizontal="16dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/dinita_cosmina_text_view_choose" />
    <ImageView
        android:id="@+id/dinita_cosmina_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/img2_cosmina"
        app:layout_constraintTop_toBottomOf="@id/dinita_cosmina_til"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dinita_cosmina_button_Submit"
        app:layout_constraintDimensionRatio="1"

        tools:ignore="NotSibling" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dinita_cosmina_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dinita_cosmina_spinner"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dinita_cosmina_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity"
            android:inputType="numberDecimal"/>


    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/dinita_cosmina_button_Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/_6c8e5d"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add"
        android:textColor="@color/ffffff"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dinita_cosmina_image"/>




</androidx.constraintlayout.widget.ConstraintLayout>